--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 <body>
-    <div id="vfabrika-container"></div>
+    <div id="/vfabrika-container"></div>
 	merhaba
 </body>
 </html>
