--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
-<!DOCTYPE html>
 <html>
 <head>
-   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">-->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="http://appjsframework.sebitvcloud.com/com/sebit/core/framework/Framework.js"></script>
-    <title></title>
+<title>I. Dönem Genel Tekrar</title>
+<style type="text/css">
+<!--
+body,html{
+  margin:0px;
+  padding:0px;
+  height:100%;
+  overflow:auto;
+  font-family:  arial, sans-serif;
+}
+-->
+
+</style>
+
+<script type="text/javascript" src="SCORM_API_wrapper.js"></script>
+
+<script type="text/javascript">
+
+//creating shortcut for less verbose code
+var scorm = pipwerks.SCORM;
+
+function init(){
+//	scorm.version = "1.2"; // auto if not specified
+	scorm.init();
+}
+
+function set(param, value){
+	scorm.set(param, value);
+}
+
+function get(param){
+	scorm.get(param);
+}
+
+function end(){
+	scorm.quit();
+}
+
+window.onload = function (){
+	init();
+}
+
+window.onunload = function (){
+	end();
+}
+
+var onmessage = function(e) { 
+ var a = e.data.split("|");
+ if(a[0] == "AppSolved"){ 
+  scorm.status("set", "completed");
+  scorm.set("cmi.core.score.raw",a[2]);
+  scorm.set("cmi.core.score.min","0");
+  scorm.set("cmi.core.score.max","100");
+  scorm.set("cmi.core.score.scaled",a[2]/100);
+ }
+} 
+ 
+if(typeof window.addEventListener != 'undefined') { 
+ window.addEventListener('message', onmessage, false); 
+} 
+else if(typeof window.attachEvent != 'undefined') { 
+ window.attachEvent('onmessage', onmessage); 
+}
+</script>
+
 </head>
+
 <body>
-    <div id="/vfabrika-container"></div>
-	merhaba
+<div style="width:100%;height:100%;overflow:hidden">
+<iframe id="frame" src ="https://LearningApps.org/show?id=p0km6mf2k20&fullscreen=1" frameborder="0" width="100%" height="100%"></iframe>
+</div>
 </body>
+
 </html>
